--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,24 @@
 language: go
-
 go:
-    - 1.2
-    - 1.3
-    - 1.4
-    - 1.5
-    # - tip
+    # - 1.7
+    - 1.8
+    - 1.9
+    - tip
+services:
+    - docker
 compiler:
     - g++
 before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install tesseract-ocr
-    - sudo apt-get install libtesseract-dev
-    - sudo apt-get install libleptonica-dev
+    # - TESSERACT=4.00.00dev LEPTONICA=1.74.2 sudo ./test/script/setup.sh
+    - sudo apt-get update -qq
+    - sudo apt-get install -y -qq libtesseract-dev libleptonica-dev tesseract-ocr-eng
+env:
+    - LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/usr/local/lib
 before_script:
     - go get github.com/otiai10/mint
 script:
-    - go test ./... -v -bench .
+    - go test -v -bench .
+    - go test -race -coverprofile=coverage.txt -covermode=atomic
+    - ./test/runtime --driver docker --verbose
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
